# MIROR-RTYPE

./: Dockerfile  README.md  build.sh  rfc.txt
.github/workflows/: main.yml
B-CPP-500-LYN-5-2-rtype-ilhan.neuville/: .gitignore  update_miror.sh
B-CPP-500-LYN-5-2-rtype-ilhan.neuville/.github/workflows/: main.yml
B-CPP-500-LYN-5-2-rtype-ilhan.neuville/server/: CMakeLists.txt
B-CPP-500-LYN-5-2-rtype-ilhan.neuville/server/include/Entity/: Entity.hpp
B-CPP-500-LYN-5-2-rtype-ilhan.neuville/server/include/Entity/MissileEntity/: MissileEntity.hpp
B-CPP-500-LYN-5-2-rtype-ilhan.neuville/server/src/Entity/MissileEntity/: MissileEntity.cpp
client/: CMakeLists.txt  build.sh
client/build-linux/: CMakeCache.txt  Makefile  cmake_install.cmake  r-type_client
client/include/: Define.hpp  Game.hpp  GameConfig.hpp
client/src/: GameConfig.cpp  game.cpp  main.cpp  r_type_client.cpp
client/src/Commands/: Commands.cpp  commandEvent.cpp
client/src/Screen/: IScreen.hpp
libs/GameEngine/: GameEngine.cpp  GameEngine.hpp
libs/GameEngine/AudioManager/: AudioManager.cpp  AudioManager.hpp
libs/GameEngine/Components/: Component.cpp
libs/GameEngine/Entities/: Entity.cpp
libs/GameEngine/ResourcesManager/: ResourceManager.cpp  ResourceManager.hpp
libs/GameEngine/Server/: ServerData.cpp  ServerData.hpp  commands.cpp  commands.hpp
libs/GameEngine/WindowManager/: WindowManager.cpp
mirror/: Dockerfile  docker_clean.sh
mirror/.github/workflows/: main.yml
mirror/client/src/: main.cpp  r_type_client.cpp
mirror/doc/: R-Type Documentation.md
mirror/libs/GameEngine/: GameEngine.cpp  mobData.hpp
mirror/mirror/client/: CMakeLists.txt
mirror/mirror/client/include/: Game.hpp  r_type_client.hpp
mirror/mirror/client/include/Commands/: Commands.hpp
mirror/server/: CMakeLists.txt
mirror/server/src/: unique_id_generation.cpp
server/: build.sh
server/include/: r_type_server.hpp
server/include/DataStruct/: gameStateData.hpp  positionStruct.hpp  requestData.hpp
server/include/Game/: Game.hpp
server/include/commands/: command_list.hpp  commands.hpp
server/src/: main.cpp  r_type_server.cpp
(+50 files in other folders)
